# wasm-component-examples

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: ci.yml  integration-test.yml  release.yml
c/: BUILD.bazel
c/src/: hello.c  main.c
c/wit/: hello.wit
cpp/: BUILD.bazel
cpp/src/: hello.cpp  main.cpp  stats.cpp
cpp/wit/: hello.wit  stats.wit
go/: BUILD.bazel  go.mod  go.sum
go/src/: hello.go
go/wit/: hello.wit
models/: README.md
rust/: BUILD.bazel  Cargo.toml
rust/src/: calculator.rs  datetime.rs  lib.rs  main.rs  yolo_inference.rs
rust/wit/: yolo.wit
rust_p3/: BUILD.bazel
rust_p3/src/: cli_runner.rs  concurrent.rs  lib.rs  text_processor.rs
rust_p3/wit/: cli_runner.wit  concurrent.wit  hello.wit  text_processor.wit
