"""Rust P3 async component examples.

Demonstrates WASI Preview 3 async components. Setting wasi_version = "p3"
passes --async to wit-bindgen, making all exported trait methods async fn.
This enables cooperative concurrency within the Component Model.

Components:
    text_processor    — async text analysis and transformation
    concurrent_tasks  — async mathematical computations
    p3_runner         — CLI runner that imports the above interfaces
    p3_cli            — composed CLI (runner + text_processor + concurrent_tasks)
"""

load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component_bindgen")
load("@rules_wasm_component//wac:defs.bzl", "wac_plug")
load("@rules_wasm_component//wit:defs.bzl", "wit_library")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# Text Processor — async text analysis and transformation
# =============================================================================

wit_library(
    name = "text_processor_interfaces",
    srcs = ["wit/text_processor.wit"],
    package_name = "text:processor",
    world = "text-processor",
)

rust_wasm_component_bindgen(
    name = "text_processor",
    srcs = ["src/text_processor.rs"],
    profiles = ["release"],
    wasi_version = "p3",
    wit = ":text_processor_interfaces",
)

# =============================================================================
# Concurrent Tasks — async mathematical computations
# =============================================================================

wit_library(
    name = "concurrent_interfaces",
    srcs = ["wit/concurrent.wit"],
    package_name = "compute:concurrent",
    world = "concurrent-tasks",
)

rust_wasm_component_bindgen(
    name = "concurrent_tasks",
    srcs = ["src/concurrent.rs"],
    profiles = ["release"],
    wasi_version = "p3",
    wit = ":concurrent_interfaces",
)

# =============================================================================
# CLI Runner — imports P3 interfaces, exports wasi:cli/run
# =============================================================================

wit_library(
    name = "cli_runner_interfaces",
    srcs = ["wit/cli_runner.wit"],
    deps = [
        ":text_processor_interfaces",
        ":concurrent_interfaces",
        "@wasi_cli//:cli",
        "@wasi_clocks//:clocks",
        "@wasi_filesystem//:filesystem",
        "@wasi_io//:streams",
        "@wasi_random//:random",
        "@wasi_sockets//:sockets",
    ],
    package_name = "cli:p3runner",
    world = "p3-runner",
)

rust_wasm_component_bindgen(
    name = "p3_runner",
    srcs = ["src/cli_runner.rs"],
    profiles = ["release"],
    wit = ":cli_runner_interfaces",
)

# =============================================================================
# Composed CLI — runner + text_processor + concurrent_tasks via wac
# =============================================================================

wac_plug(
    name = "p3_cli",
    plugs = [
        ":text_processor",
        ":concurrent_tasks",
    ],
    socket = ":p3_runner",
)

# All P3 components
filegroup(
    name = "all",
    srcs = [
        ":concurrent_tasks",
        ":p3_cli",
        ":text_processor",
    ],
)
